--- a/面试知识点.md
+++ b/面试知识点.md
@@ -2,6 +2,17 @@
 
 ## 1. [设计模式以及设计原则](./设计模式.md)
 
+## 2. [类的加载机制](./类的加载机制.md)
+
+## 3. [JVM理解以及性能调优](./JVM.md)
+
+## 4. [线程以及线程池](./线程及线程池.md)
+
+## 5. [Hibernate](./hibernate.md)
+
+## 6. [Mybatis](./mybatis.md)
+
+
     
         
 
