--- a/线程及线程池.md
+++ b/线程及线程池.md
@@ -1,1 +1,8 @@
-# 4.线程及线程池
+# 4. 线程及线程池
+    
+## 4.1 线程demo
+> https://github.com/wulinyun/spring-cloud-demo/tree/master/spring-boot-jar/src/main/java/com/landasoft/demo/springboot/springbootjar/practice/thread
+
+## 4.2 线程池demo
+> https://github.com/wulinyun/spring-cloud-demo/tree/master/spring-boot-jar/src/main/java/com/landasoft/demo/springboot/springbootjar/practice/thread/pool
+
