--- a/设计模式.md
+++ b/设计模式.md
@@ -25,6 +25,9 @@
     
 使用场景：
     IO 、数据库连接、Redis 连接等。    
+
+单例模式的几种写法：
+> https://github.com/wulinyun/spring-cloud-demo/tree/master/spring-boot-jar/src/main/java/com/landasoft/demo/springboot/springbootjar/practice/singleton
     
 ## 1.8 代理模式
     代理模式是给某一个对象提供一个代理，并由代理对象控制对原对象的引用。
