英文自我介绍

--- a/自我介绍.md
+++ b/自我介绍.md
@@ -3,3 +3,6 @@
 ## [中文自我介绍](./chinese-self-introduction.md)
 
 ## [英文自我介绍](./english-self-introduction.md)
+
+参考模板：
+> http://www.pinlue.com/article/2020/06/2315/3310794356904.html
