知识点更新

--- a/面试知识点.md
+++ b/面试知识点.md
@@ -8,15 +8,44 @@
 
 ## 4. [线程以及线程池](./线程及线程池.md)
 
+
 ## 5. [Hibernate](./hibernate.md)
 
 ## 6. [Mybatis](./mybatis.md)
 
-## 7.[linux](./linux.md)
+## 7. [JPA](./JPA.md)
 
 
+## 8. [Spring](./Spring.md)
 
-## [other](./other.md)
+## 9. [SpringMVC](./SpringMVC.md)
+
+## 10. [SpringBoot](./SpringBoot.md)
+
+## 11. [SpringCloud](./SpringCloud.md)
+
+
+## 12. [Redis](./Redis.md)
+
+## 13. [Memcached](./Memcached.md)
+
+
+## 14. [RabbitMQ](./RabbitMQ.md)
+
+## 15. [ActiveMQ](./ActiveMQ.md)
+
+## 16. [MySQL](./MySQL.md)
+
+
+## 85. [docker](./docker.md)
+
+## 86. [kubernetes](./kubernetes.md)
+
+
+## 87. [linux](./linux.md)
+
+
+## 88.[other](./other.md)
 
 
     
