更新整理的知识点数据

--- a/面试知识点.md
+++ b/面试知识点.md
@@ -8,44 +8,64 @@
 
 ## 4. [线程以及线程池](./线程及线程池.md)
 
+***
+# Spring-*
 
-## 5. [Hibernate](./hibernate.md)
+## 10. [Spring](./Spring.md)
 
-## 6. [Mybatis](./mybatis.md)
+## 11. [SpringMVC](./SpringMVC.md)
 
-## 7. [JPA](./JPA.md)
+## 12. [SpringBoot](./SpringBoot.md)
 
+## 13. [SpringCloud](./SpringCloud.md)
 
-## 8. [Spring](./Spring.md)
+***
+# 缓存中间件
 
-## 9. [SpringMVC](./SpringMVC.md)
+## 14. [Redis](./Redis.md)
 
-## 10. [SpringBoot](./SpringBoot.md)
-
-## 11. [SpringCloud](./SpringCloud.md)
-
-
-## 12. [Redis](./Redis.md)
-
-## 13. [Memcached](./Memcached.md)
+## 15. [Memcached](./Memcached.md)
 
 
-## 14. [RabbitMQ](./RabbitMQ.md)
+# 消息中间件
 
-## 15. [ActiveMQ](./ActiveMQ.md)
+## 16. [RabbitMQ](./RabbitMQ.md)
 
-## 16. [MySQL](./MySQL.md)
+## 17. [ActiveMQ](./ActiveMQ.md)
 
+
+***
+#持久框架
+
+## 20. [Hibernate](./hibernate.md)
+
+## 21. [Mybatis](./mybatis.md)
+
+## 22. [JPA](./JPA.md)
+
+*** 
+# 数据库
+## 30. [MySQL](./MySQL.md)
+
+
+***
+# linux服务器
+
+## 70. [linux](./linux.md)
+
+***
+# 容器
 
 ## 85. [docker](./docker.md)
 
 ## 86. [kubernetes](./kubernetes.md)
 
+***
+# 其它
 
-## 87. [linux](./linux.md)
+## 90.[other](./other.md)
 
-
-## 88.[other](./other.md)
+## [全量知识点入门](https://www.runoob.com/)
 
 
     
