--- a/面试知识点.md
+++ b/面试知识点.md
@@ -6,8 +6,6 @@
 
 ## 3. [JVM理解以及性能调优](./JVM.md)
 
-## 4. [线程以及线程池](./线程及线程池.md)
-
 ***
 # Spring-*
 
@@ -26,7 +24,7 @@
 
 ## 15. [Memcached](./Memcached.md)
 
-
+***
 # 消息中间件
 
 ## 16. [RabbitMQ](./RabbitMQ.md)
@@ -47,6 +45,10 @@
 # 数据库
 ## 30. [MySQL](./MySQL.md)
 
+***
+# 线程以及线程池
+
+## 40. [线程以及线程池](./线程及线程池.md)
 
 ***
 # linux服务器
